deploy/uat/deploy_uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauthserver-deployment
  labels:
    app: oauthserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauthserver
  template:
    metadata:
      labels:
        app: oauthserver
    spec:
      containers:
        - name: oauthserver
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-oauthserver-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: 244m
              memory: 853Mi
            requests:
              cpu: 3m
              memory: 432Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: oauthserver-svc
  labels:
    app: oauthserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8090
  selector:
    app: oauthserver
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogos-deployment
  labels:
    app: catalogos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogos
  template:
    metadata:
      labels:
        app: catalogos
    spec:
      containers:
        - name: catalogos
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-catalogos-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 36m
              memory: 217Mi
            requests:
              cpu: 3m
              memory: 152Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: catalogos-svc
  labels:
    app: catalogos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: catalogos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-deployment
  labels:
    app: usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-usuarios-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 279m
              memory: 550Mi
            requests:
              cpu: 4m
              memory: 232Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-svc
  labels:
    app: usuarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: usuarios
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapadapter-deployment
  labels:
    app: sapadapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapadapter
  template:
    metadata:
      labels:
        app: sapadapter
    spec:
      containers:
        - name: sapadapter
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-sapadapter-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 623m
              memory: 989Mi
            requests:
              cpu: 9m
              memory: 371Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: sapadapter-svc
  labels:
    app: sapadapter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sapadapter
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos-deployment
  labels:
    app: pedidos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
    spec:
      containers:
        - name: pedidos
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-pedidos-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 519m
              memory: 1106Mi
            requests:
              cpu: 87m
              memory: 460Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos-svc
  labels:
    app: pedidos
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pedidos
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouses-deployment
  labels:
    app: warehouses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouses
  template:
    metadata:
      labels:
        app: warehouses
    spec:
      containers:
        - name: warehouses
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-warehouses-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 88m
              memory: 223Mi
            requests:
              cpu: 2m
              memory: 172Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: warehouses-svc
  labels:
    app: warehouses
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: warehouses
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-deployment
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
        - name: reporting
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-reporting-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 58m
              memory: 215Mi
            requests:
              cpu: 4m
              memory: 117Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-svc
  labels:
    app: reporting
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: reporting
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapservicelayeradapter-deployment
  labels:
    app: sapservicelayeradapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapservicelayeradapter
  template:
    metadata:
      labels:
        app: sapservicelayeradapter
    spec:
      containers:
        - name: sapservicelayeradapter
          image: omicron.azurecr.io/omicronuat/omicron-appiosformulas-sapservicelayeradapter-repository:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 5m
              memory: 100Mi
            requests:
              cpu: 1m
              memory: 40Mi
      imagePullSecrets:
        - name: pullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: sapservicelayeradapter-svc
  labels:
    app: sapservicelayeradapter
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sapservicelayeradapter
  type: ClusterIP
---
