deploy/uat/ingress-oauth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-oauthserver
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx-api
  tls:
    - hosts:
        - omicronlabapiuat.eastus2.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: omicronlabapiuat.eastus2.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: oauthserver-svc
                port:
                  number: 80
            path: /api/oauth(/|$)(.*)
            pathType: Prefix
