deploy/uat/ingressLogUAT.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omicron-ingress-seq
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx-log
  tls:
    - hosts:
        - omicronlabloguat.eastus2.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: omicronlabloguat.eastus2.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: seqlog-svc
                port:
                  number: 81
            path: /
            pathType: Prefix
